refactored unneeded contexts from files, added backend connection functional tests