@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'robolectric'
 
 
 android {
@@ -15,8 +16,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+//            minifyEnabled true
+//            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -26,6 +27,7 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'LICENSE.txt'
     }
 
     compileOptions {
@@ -38,13 +40,35 @@ android {
     }
 }
 
+robolectric {
+
+    // configure the set of classes for JUnit tests
+    include '**/*Tests.class'
+    exclude '**/espresso/**/*.class'
+
+    // configure max heap size of the test JVM
+    maxHeapSize = '2048m'
+
+    // configure the test JVM arguments
+    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+
+    // configure whether failing tests should fail the build
+    ignoreFailures true
+
+    // use afterTest to listen to the test execution results
+    afterTest { descriptor, result ->
+        println "Executing test for {$descriptor.name} with result: ${result.resultType}"
+    }
+
+}
+
 repositories {
     mavenCentral()
     mavenLocal()
 }
 
 // To use: File->Settings->Compiler->Command-line Options: -PuseAPISnapshot=true
-String apiDependency = 'org.mythtv.android:mythtv-service-api:2.0.0'
+String apiDependency = 'org.mythtv.android:mythtv-service-api:2.0.1'
 
 if (hasProperty('useAPISnapshot')) {
     apiDependency += '-SNAPSHOT'
@@ -54,7 +78,6 @@ if (hasProperty('useAPISnapshot')) {
 dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:recyclerview-v7:21.0.2'
     compile 'com.android.support:leanback-v17:21.0.2'
@@ -62,4 +85,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile apiDependency
 
+//    compile 'commons-logging:commons-logging:1.1.1'
+//    compile 'org.apache.httpcomponents:httpclient:4.0.3'
+
+    androidTestCompile 'org.robolectric:robolectric:2.3'
+    androidTestCompile 'junit:junit:4.11'
 }
